fix(component/phninput): remove z-index on mc-phone-number__dropdown element

--- a/packages/styles/components/_c.phone-number.scss
+++ b/packages/styles/components/_c.phone-number.scss
@@ -97,10 +97,6 @@
     z-index: 10;
   }
 
-  &__dropdown {
-    z-index: 20;
-  }
-
   &--focused {
     #{$parent}__button {
       border-color: $color-info-500;
